correccion recep, doctor, admin
falta terminar infra e interfaces