@@ -3,7 +3,6 @@ package com.Clinica1.myApp.mantenimiento.infraestructure.persistence.adapter;
 import com.Clinica1.myApp.SharedKernel.IDEntidad;
 import com.Clinica1.myApp.mantenimiento.domain.model.aggregates.Administrador;
 import com.Clinica1.myApp.mantenimiento.domain.repository.AdministradorRepository;
-import com.Clinica1.myApp.mantenimiento.infraestructure.persistence.jpa.entity.AdministradorEntity;
 import com.Clinica1.myApp.mantenimiento.infraestructure.persistence.jpa.repository.JPAAdministradorRepository;
 import com.Clinica1.myApp.mantenimiento.infraestructure.persistence.mapper.AdministradorMapper;
 import lombok.RequiredArgsConstructor;
@@ -11,55 +10,50 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
 public class AdministradorRepositoryAdapter implements AdministradorRepository {
-    private final JPAAdministradorRepository admin_repo;
-    private final AdministradorMapper admin_map;
+    private final JPAAdministradorRepository jpaRepository;
+    private final AdministradorMapper mapper;
 
-    //metodos especificos
     @Override
-    public Administrador findByIdEmp(IDEntidad id_emp){
-        return admin_repo.findByIdEmp(id_emp.obtenerid())
-                .map(admin_map::ToDomain)
+    public Administrador findByIdEmp(IDEntidad id_emp) {
+        return jpaRepository.findByIdEmp(id_emp.obtenerid())
+                .map(mapper::toDomain)
                 .orElse(null);
     }
-    //ICRUD
-    @Override
-    public Administrador insert(Administrador admin){
-        AdministradorEntity admin_ent= admin_map.ToEntity(admin);
-        AdministradorEntity admin_saved= admin_repo.save(admin_ent);
 
-        return admin_map.ToDomain(admin_saved);
+    @Override
+    public Administrador insert(Administrador admin) {
+        return mapper.toDomain(
+                jpaRepository.save(mapper.toEntity(admin))
+        );
     }
 
     @Override
-    public Administrador update(Administrador admin2){
-        AdministradorEntity admin_ent2= admin_map.ToEntity(admin2);
-        AdministradorEntity admin_saved2= admin_repo.save(admin_ent2);
-
-        return admin_map.ToDomain(admin_saved2);
+    public Administrador update(Administrador admin) {
+        return mapper.toDomain(
+                jpaRepository.save(mapper.toEntity(admin))
+        );
     }
 
     @Override
-    public Optional<Administrador> findById(IDEntidad id_admin){
-        return admin_repo.findById(id_admin.obtenerid())
-                .map(admin_map::ToDomain);
+    public Optional<Administrador> findById(IDEntidad id_admin) {
+        return jpaRepository.findById(id_admin.obtenerid())
+                .map(mapper::toDomain);
     }
 
     @Override
-    public List<Administrador> findall(){
-        return admin_repo.findAll()
-                .stream().map(admin_map::ToDomain)
-                .collect(Collectors.toList());
+    public List<Administrador> findall() {
+        return jpaRepository.findAll()
+                .stream()
+                .map(mapper::toDomain)
+                .toList();
     }
 
     @Override
-    public void delete(IDEntidad id_admin){
-        admin_repo.deleteById(id_admin.obtenerid());
+    public void delete(IDEntidad id_admin) {
+        jpaRepository.deleteById(id_admin.obtenerid());
     }
-
-
 }
